User impact: add top edited articles section
* Add article list vue components
* Add the same logic from Impact::getImage in
ComputedUserImpactLookup and call it from getPageViewData
to add the thumbnail image urls.
* Create pageviews urls in the UserImpactHandler
using the wiki project name and content language
as project and interface language respectively
* Remove CLink component since Codex approach is
to have functional mixins for it

Bug: T313310
Change-Id: Ia6cc2cba67026c796c9bbd7b3f200e001ead54e3

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -75,9 +75,9 @@
 	"growthexperiments-homepage-impact-scores-thanks-info-text": "{{SITENAME}} is created by a community of editors like {{GENDER:$1|you}}. {{GENDER:$1|You}} may be thanked by another contributor for an edit {{GENDER:$1|you’ve}} made, and {{GENDER:$1|you}} can thank others for their edits too.",
 	"growthexperiments-homepage-impact-scores-best-streak-info-text": "This is the highest number of days in a row that {{GENDER:$1|you}} made at least one edit.",
 	"growthexperiments-homepage-impact-scores-best-streak-info-data-text": "{{GENDER:$1|Your}} current longest streak is $2 {{PLURAL:$2|day|days}} which {{GENDER:$1|you}} achieved between $3.",
-	"growthexperiments-homepage-impact-subheader-text": "People are viewing the articles {{GENDER:$1|you}} edited!",
+	"growthexperiments-homepage-impact-subheader-text": "Views on articles {{GENDER:$1|you've}} edited",
 	"growthexperiments-homepage-impact-subheader-subtext": "Views since {{GENDER:$1|you}} edited (last 60 days):",
-	"growthexperiments-homepage-impact-contributions-link": "{{GENDER:$2|You've}} made <strong>$1</strong> {{PLURAL:$1|edit|edits}} (see all)",
+	"growthexperiments-homepage-impact-contributions-link": "View all {{GENDER:$2|your}} edits ($1) ",
 	"growthexperiments-homepage-impact-subheader-text-no-edit": "{{GENDER:$1|You}} have not yet created or edited any articles.",
 	"growthexperiments-homepage-impact-subheader-text-no-pageviews": "This area will show how many times people have viewed the articles {{GENDER:$1|you}} have created or edited.",
 	"growthexperiments-homepage-impact-body-no-edit": "<strong>0</strong> edits to articles",
