--- a/i18n/mentorship/api/en.json
+++ b/i18n/mentorship/api/en.json
@@ -25,5 +25,6 @@
 	"apihelp-growthmanagementorlist-param-weight": "Weight",
 	"apihelp-growthmanagementorlist-param-autoassigned": "Is the mentor automatically assigned to newcomers?",
 	"apihelp-growthmanagementorlist-param-summary": "Reason for the change",
-	"apihelp-growthmanagementorlist-param-username": "Username of the mentor affected by the change. If not provided, currently logged in user will be used. Can be only used by privileged users."
+	"apihelp-growthmanagementorlist-param-username": "Username of the mentor affected by the change. If not provided, currently logged in user will be used. Can be only used by privileged users.",
+	"growthexperiments-api-managementors-error-no-away-timestamp": "If isaway is true, then awaytimestamp must be provided."
 }
