SpecialManageMentors: Include mentors' status/weight
Bug: T321601
Change-Id: I927cb50ece781190b7d42094338e6eadbf8368cc

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -131,6 +131,9 @@
 	"growthexperiments-manage-mentors-none": "None",
 	"growthexperiments-manage-mentors-username": "Username",
 	"growthexperiments-manage-mentors-last-active": "Last active",
+	"growthexperiments-manage-mentors-weight": "Weight",
+	"growthexperiments-manage-mentors-status": "Status",
+	"growthexperiments-manage-mentors-status-away-until": "Away until $1",
 	"growthexperiments-manage-mentors-intro-msg": "Message for newcomers",
 	"growthexperiments-manage-mentors-edit": "Edit",
 	"growthexperiments-manage-mentors-edit-pretext": "{{GENDER:|You}} are about to edit the mentorship-related options for {{GENDER:$1|mentor}} [[User:$1|$1]].",
