--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -137,6 +137,9 @@
 	"growthexperiments-manage-mentors-none": "Displayed by Special:ManageMentors when there are no mentors.\n\n{{Identical|None}}",
 	"growthexperiments-manage-mentors-username": "Column header in Special:ManageMentors",
 	"growthexperiments-manage-mentors-last-active": "Column header in Special:ManageMentors",
+	"growthexperiments-manage-mentors-weight": "Column header in Special:ManageMentors",
+	"growthexperiments-manage-mentors-status": "Column header in Special:ManageMentors",
+	"growthexperiments-manage-mentors-status-away-until": "Message shown in \"Status\" column of Special:ManageMentors when the mentor is away.",
 	"growthexperiments-manage-mentors-intro-msg": "Column header in Special:ManageMentors",
 	"growthexperiments-manage-mentors-edit": "Button label in Special:ManageMentors\n{{identical|Edit}}",
 	"growthexperiments-manage-mentors-edit-pretext": "An introduction message shown in the edit form in Special:ManageMentors\n\nParameters:\n* $1 - username of the mentor",
