--- a/i18n/homepage/qqq.json
+++ b/i18n/homepage/qqq.json
@@ -556,5 +556,8 @@
 	"growthexperiments-homepage-mentorship-about-mentor-par2": "Text displayed in the \"About mentorship\" dialog\n* $1 - Mentor's gender, to be used with GENDER.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-about-subheader-optout": "Subheader of the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-about-optout-par1": "Text displayed in the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}",
-	"growthexperiments-homepage-mentorship-about-done": "Done button displayed in the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}\n\n{{identical|Done}}"
+	"growthexperiments-homepage-mentorship-about-done": "Done button displayed in the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}\n\n{{identical|Done}}",
+	"growthexperiments-homepage-special-contribute-title": "Title to show in card displayed on Special:Contribute.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-homepage-special-contribute-description": "Description to show in card displayed on Special:Contribute.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-homepage-special-contribute-cta": "Text to show in call-to-action button in card displayed on Special:Contribute.\n\n{{doc-growthexperiments-homepage}}"
 }
