Add ApiQueryImageSuggestionData prop module
Add query prop module to allow for fetching image suggestion data for
titles using the image suggestion API service
(https://wikitech.wikimedia.org/wiki/Add_Image).

The module is rate limited to 500 requests per day.

In an emergency, the module can be disabled with:

 $wgAPIPropModules['growthimagesuggestiondata'] = ApiQueryDisabled::class;

Bug: T306349
Bug: T320739
Change-Id: I62afd8f6935df69eb37d83ebf73e82bef94530c9

--- a/i18n/homepage/api/en.json
+++ b/i18n/homepage/api/en.json
@@ -12,5 +12,6 @@
 	"apihelp-growthsetmentor-param-mentor": "Mentor's username",
 	"apihelp-growthsetmentor-param-reason": "Reason for the change",
 	"apihelp-growthinvalidateimagerecommendation-summary": "Invalidate image recommendation task",
-	"apihelp-growthinvalidateimagerecommendation-param-title": "Title of the article the image recommendation task is for"
+	"apihelp-growthinvalidateimagerecommendation-param-title": "Title of the article the image recommendation task is for",
+	"apihelp-query+growthimagesuggestiondata-summary": "Fetch associated [[mw:wikitech:Add_Image|image suggestion data]], if available"
 }
