[i18n] Special:ManageMentors: Do not use the word "Weight"
In T321995, we decided that the word "Weight"
is confusing to admins/mentors. We also decided
to change it to "Number of newcomers assigned",
which is a short version of what
the Mentor dashboard itself uses ("Number of newcomers
assigned to me").

Bug: T321995
Change-Id: I828041dd2ca8be21632ac2ccbd7e6c2c3470e724

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -134,7 +134,7 @@
 	"growthexperiments-manage-mentors-none": "None",
 	"growthexperiments-manage-mentors-username": "Username",
 	"growthexperiments-manage-mentors-last-active": "Last active",
-	"growthexperiments-manage-mentors-weight": "Weight",
+	"growthexperiments-manage-mentors-weight": "Number of newcomers assigned",
 	"growthexperiments-manage-mentors-status": "Status",
 	"growthexperiments-manage-mentors-status-away-until": "Away until $1",
 	"growthexperiments-manage-mentors-intro-msg": "Message for newcomers",
@@ -142,7 +142,7 @@
 	"growthexperiments-manage-mentors-edit-pretext": "{{GENDER:|You}} are about to edit the mentorship-related options for {{GENDER:$1|mentor}} [[User:$1|$1]].",
 	"growthexperiments-manage-mentors-edit-intro-msg": "Introduction message",
 	"growthexperiments-manage-mentors-edit-is-auto-assigned": "Is automatically assigned to newcomers?",
-	"growthexperiments-manage-mentors-edit-weight": "Weight",
+	"growthexperiments-manage-mentors-edit-weight": "Number of newcomers assigned",
 	"growthexperiments-manage-mentors-edit-is-away": "Is away?",
 	"growthexperiments-manage-mentors-edit-is-away-blocked": "Mentor \"$1\" is currently blocked, and their away status cannot be changed.",
 	"growthexperiments-manage-mentors-edit-away-until": "Away until",
