--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -72,8 +72,10 @@
 	"growthexperiments-homepage-impact-edited-articles-trend-chart-count-label": "Views on articles {{GENDER:$1|you've}} edited",
 	"growthexperiments-homepage-impact-scores-edit-count": "Total edits",
 	"growthexperiments-homepage-impact-scores-thanks-count": "Thanks received",
+	"growthexperiments-homepage-impact-scores-thanks-info-label": "Information about how thanks work",
 	"growthexperiments-homepage-impact-scores-thanks-info-text": "{{SITENAME}} is created by a community of editors like {{GENDER:$1|you}}. {{GENDER:$1|You}} may be thanked by another contributor for an edit {{GENDER:$1|you’ve}} made, and {{GENDER:$1|you}} can thank others for their edits too.",
 	"growthexperiments-homepage-impact-scores-best-streak-info-text": "This is the highest number of days in a row that {{GENDER:$1|you}} made at least one edit.",
+	"growthexperiments-homepage-impact-scores-streak-info-label": "Information about how the streak is calculated",
 	"growthexperiments-homepage-impact-scores-best-streak-info-data-text": "{{GENDER:$1|Your}} current longest streak is $2 {{PLURAL:$2|day|days}} which {{GENDER:$1|you}} achieved between $3.",
 	"growthexperiments-homepage-impact-subheader-text": "Views on articles {{GENDER:$1|you've}} edited",
 	"growthexperiments-homepage-impact-subheader-subtext": "Views since {{GENDER:$1|you}} edited (last 60 days):",
