--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -130,7 +130,9 @@
 	"growthexperiments-manage-mentors-pretext-to-enroll": "To enroll as a mentor, go to [[Special:EnrollAsMentor]].",
 	"growthexperiments-manage-mentors-error-no-such-user": "Error: No such user with ID of $1 exists. This is probably an internal error.",
 	"growthexperiments-manage-mentors-auto-assigned": "Automatically assigned mentors",
+	"growthexperiments-manage-mentors-auto-assigned-text": "New accounts are randomly assigned to these mentors.",
 	"growthexperiments-manage-mentors-manually-assigned": "Manually assigned mentors",
+	"growthexperiments-manage-mentors-manually-assigned-text": "New accounts are not randomly assigned to these mentors. Like other mentors, these mentors can manually select the accounts they would like to mentor. This section is mainly for workshop hosts who just want to mentor people they met.",
 	"growthexperiments-manage-mentors-none": "None",
 	"growthexperiments-manage-mentors-username": "Username",
 	"growthexperiments-manage-mentors-last-active": "Last active",
