NewImpact: update copy texts based on copy doc v0.2
Bug: T322890
Change-Id: I283abcbb1329beeaadf7083ab199ac28b86fa8d2

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -72,13 +72,13 @@
 	"growthexperiments-homepage-impact-edited-articles-trend-chart-count-label": "Views on articles {{GENDER:$1|you've}} edited",
 	"growthexperiments-homepage-impact-scores-edit-count": "Total edits",
 	"growthexperiments-homepage-impact-scores-thanks-count": "Thanks received",
-	"growthexperiments-homepage-impact-scores-thanks-info-label": "Information about how thanks work",
+	"growthexperiments-homepage-impact-scores-thanks-info-label": "More information about how thanks works",
 	"growthexperiments-homepage-impact-scores-thanks-info-text": "{{SITENAME}} is created by a community of editors like {{GENDER:$1|you}}. {{GENDER:$1|You}} may be thanked by another contributor for an edit {{GENDER:$1|you’ve}} made, and {{GENDER:$1|you}} can thank others for their edits too.",
 	"growthexperiments-homepage-impact-scores-best-streak-info-text": "This is the highest number of days in a row that {{GENDER:$1|you}} made at least one edit.",
-	"growthexperiments-homepage-impact-scores-streak-info-label": "Information about how the streak is calculated",
+	"growthexperiments-homepage-impact-scores-streak-info-label": "More information about the longest streak",
 	"growthexperiments-homepage-impact-scores-best-streak-info-data-text": "{{GENDER:$1|Your}} current longest streak is $2 {{PLURAL:$2|day|days}} which {{GENDER:$1|you}} achieved between $3.",
 	"growthexperiments-homepage-impact-scores-best-streak-info-data-text-single-day": "{{GENDER:$1|Your}} current longest streak is one day which {{GENDER:$1|you}} achieved on $3.",
-	"growthexperiments-homepage-impact-subheader-text": "Views on articles {{GENDER:$1|you've}} edited",
+	"growthexperiments-homepage-impact-subheader-text": "Most viewed (since {{GENDER:$1|your}} edit)",
 	"growthexperiments-homepage-impact-subheader-subtext": "Views since {{GENDER:$1|you}} edited (last 60 days):",
 	"growthexperiments-homepage-impact-contributions-link": "View all {{GENDER:$2|your}} edits ($1) ",
 	"growthexperiments-homepage-impact-subheader-text-no-edit": "{{GENDER:$1|You}} have not yet created or edited any articles.",
@@ -87,6 +87,7 @@
 	"growthexperiments-homepage-impact-contributions-link-no-edit": "<strong>$1</strong> {{PLURAL:$1|edit|edits}} to other kinds of pages (see all)",
 	"growthexperiments-homepage-impact-article-link-tooltip": "Go to article",
 	"growthexperiments-homepage-impact-pageviews-link-tooltip": "See detailed page views",
+	"growthexperiments-homepage-impact-edited-articles-trend-chart-title": "A line chart showing the total daily views for articles edited in the last $1 days.",
 	"growthexperiments-homepage-impact-empty-pageviews-tooltip": "Since you first edited this article today, pageviews have not yet been calculated. Check back tomorrow!",
 	"growthexperiments-homepage-impact-empty-pageviews-tooltip-short": "Pageviews have not yet been calculated. Check back tomorrow!",
 	"growthexperiments-homepage-impact-empty-pageviews-tooltip-button": "Got it",
