NewImpact: use plural in pageviews chart title
Bug: T322890
Change-Id: I6505d09e405bc195f0334d49c1f3386004c2e502

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -87,7 +87,7 @@
 	"growthexperiments-homepage-impact-contributions-link-no-edit": "<strong>$1</strong> {{PLURAL:$1|edit|edits}} to other kinds of pages (see all)",
 	"growthexperiments-homepage-impact-article-link-tooltip": "Go to article",
 	"growthexperiments-homepage-impact-pageviews-link-tooltip": "See detailed page views",
-	"growthexperiments-homepage-impact-edited-articles-trend-chart-title": "A line chart showing the total daily views for articles edited in the last $1 days.",
+	"growthexperiments-homepage-impact-edited-articles-trend-chart-title": "A line chart showing the total daily views for articles edited in the last $1 {{PLURAL:$1|day|days}}.",
 	"growthexperiments-homepage-impact-empty-pageviews-tooltip": "Since you first edited this article today, pageviews have not yet been calculated. Check back tomorrow!",
 	"growthexperiments-homepage-impact-empty-pageviews-tooltip-short": "Pageviews have not yet been calculated. Check back tomorrow!",
 	"growthexperiments-homepage-impact-empty-pageviews-tooltip-button": "Got it",
