User impact: Show discovery tour to desktop users who had old module
- Show the discovery tour to existing desktoip users who have the
  old impact module in an activated state

Bug: T323619
Change-Id: Ia35b97a7d554f7d06d765e284f2661b36d310107

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -544,5 +544,8 @@
 	"growthexperiments-homepage-mentorship-about-done": "Done",
 	"growthexperiments-homepage-special-contribute-title": "Suggested edits",
 	"growthexperiments-homepage-special-contribute-description": "Make small and easy changes (e.g., add a link or copyedit) to improve existing articles.",
-	"growthexperiments-homepage-special-contribute-cta": "View suggested edits"
+	"growthexperiments-homepage-special-contribute-cta": "View suggested edits",
+	"growthexperiments-tour-newimpact-discovery-title": "Updated design",
+	"growthexperiments-tour-newimpact-discovery-description": "More of {{GENDER:|your}} editing activity has been added!",
+	"growthexperiments-tour-newimpact-discovery-response-button-okay": "Got it"
 }
