--- a/i18n/homepage/qqq.json
+++ b/i18n/homepage/qqq.json
@@ -565,5 +565,8 @@
 	"growthexperiments-homepage-mentorship-about-done": "Done button displayed in the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}\n\n{{identical|Done}}",
 	"growthexperiments-homepage-special-contribute-title": "Title to show in card displayed on Special:Contribute.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-special-contribute-description": "Description to show in card displayed on Special:Contribute.\n\n{{doc-growthexperiments-homepage}}",
-	"growthexperiments-homepage-special-contribute-cta": "Text to show in call-to-action button in card displayed on Special:Contribute.\n\n{{doc-growthexperiments-homepage}}"
+	"growthexperiments-homepage-special-contribute-cta": "Text to show in call-to-action button in card displayed on Special:Contribute.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-tour-newimpact-discovery-title": "Text to show in title of guided tour introducing new impact module.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-tour-newimpact-discovery-description": "Text to show in description of guided tour introducing new impact module.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-tour-newimpact-discovery-response-button-okay": "Text for button that closes guided tour.\n\n{{doc-growthexperiments-homepage}}"
 }
