NewImpact: Use "View all edits" in footer
Also add some translations for the four pilot wikis which use this
string already: ar and cs from tw.net, bn and es from
growthexperiments-homepage-impact-contributions-link.

Bug: T325216
Change-Id: I5200a0aa938ab4e5aa58bb712e0a66ff13af6616
(cherry picked from commit 591d2188432ec445969fdaada9130e4f84dcf8ec)

--- a/i18n/homepage/bn.json
+++ b/i18n/homepage/bn.json
@@ -560,5 +560,6 @@
 	"growthexperiments-homepage-special-contribute-cta": "পরামর্শকৃত সম্পাদনাগুলো দেখুন",
 	"growthexperiments-tour-newimpact-discovery-title": "হালনাগাদকৃত ডিজাইন",
 	"growthexperiments-tour-newimpact-discovery-description": "{{GENDER:|আপনার}} জন্য আরো সম্পাদনার সক্রিয়তার তথ্য যোগ করা হয়েছে!",
-	"growthexperiments-tour-newimpact-discovery-response-button-okay": "বুঝেছি"
+	"growthexperiments-tour-newimpact-discovery-response-button-okay": "বুঝেছি",
+	"growthexperiments-homepage-newimpact-contributions-link": "আপনার সব সম্পাদনা দেখুন"
 }
