--- a/i18n/homepage/ar.json
+++ b/i18n/homepage/ar.json
@@ -559,5 +559,6 @@
 	"growthexperiments-homepage-special-contribute-cta": "{{GENDER:|شاهد|شاهدي}} التعديلات المقترحة",
 	"growthexperiments-tour-newimpact-discovery-title": "تصميم محيّن",
 	"growthexperiments-tour-newimpact-discovery-description": "تمت إضافة المزيد من {{GENDER:|أنشطتك}} التحريرية!",
-	"growthexperiments-tour-newimpact-discovery-response-button-okay": "عُلم"
+	"growthexperiments-tour-newimpact-discovery-response-button-okay": "عُلم",
+	"growthexperiments-homepage-newimpact-contributions-link": "عرض كل التعديلات"
 }
