--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -151,6 +151,7 @@
 	"growthexperiments-homepage-mentorship-dialog-title": "Ask {{GENDER:$2|your}} {{GENDER:$1|mentor}}",
 	"growthexperiments-homepage-mentorship-questionreview-header": "When you ask a question, it gets <strong>published publicly</strong> under {{GENDER:$2|your}} username, \"$2\", to $3, which is where {{GENDER:$1|he|she|they}} can find and respond to your question.",
 	"growthexperiments-homepage-mentorship-questionreview-header-away": "{{GENDER:|Your}} primary {{GENDER:$2|mentor}}, \"[[User:$1|$1]]\", is currently away until $3.",
+	"growthexperiments-homepage-mentorship-questionreview-header-away-no-timestamp": "{{GENDER:|Your}} primary {{GENDER:$2|mentor}}, \"[[User:$1|$1]]\", is currently away.",
 	"growthexperiments-homepage-mentorship-questionreview-header-away-another-mentor": "Another {{GENDER:$2|mentor}}, \"[[User:$1|$1]]\", will answer your questions for the time being.",
 	"growthexperiments-homepage-mentorship-questionreview-header-mentor-talk-link-text": "{{GENDER:$2|your}} {{GENDER:$1|mentor's}} talk page",
 	"growthexperiments-homepage-mentorship-confirmation-text": "{{GENDER:$2|Your}} question is now on your mentor's talk page, which is where {{GENDER:$1|he|she|they}} will answer it as soon as {{GENDER:$1|he|she|they}} can.",
