--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -64,22 +64,29 @@
 	"growthexperiments-homepage-new-impact-no-js-fallback": "Please enable JavaScript to view this component.",
 	"growthexperiments-homepage-impact-header": "{{GENDER:$1|Your}} impact",
 	"growthexperiments-homepage-impact-recent-activity-title": "{{GENDER:$1|Your}} recent activity (last $2 {{PLURAL:$2|day|days}})",
+	"growthexperiments-homepage-impact-recent-activity-title-third-person": "Recent activity (last $1 {{PLURAL:$1|day|days}})",
 	"growthexperiments-homepage-impact-recent-activity-last-edit-text": "Last edited",
 	"growthexperiments-homepage-impact-recent-activity-best-streak-text": "Longest streak",
 	"growthexperiments-homepage-impact-recent-activity-streak-count-text": "$1 {{PLURAL:$1|day|days}}",
 	"growthexperiments-homepage-impact-recent-activity-contribs-count-text": "{{PLURAL:$1|Edit|Edits}}",
 	"growthexperiments-homepage-impact-recent-activity-streak-data-text": "$1 {{PLURAL:$1|edit|edits}} on $2",
 	"growthexperiments-homepage-impact-edited-articles-trend-chart-count-label": "Views on articles {{GENDER:$1|you've}} edited",
+	"growthexperiments-homepage-impact-edited-articles-trend-chart-count-label-third-person": "Views on articles edited",
 	"growthexperiments-homepage-impact-scores-edit-count": "Total edits",
 	"growthexperiments-homepage-impact-scores-thanks-count": "Thanks received",
 	"growthexperiments-homepage-impact-scores-over-limit": "999+",
 	"growthexperiments-homepage-impact-scores-thanks-info-label": "More information about how thanks works",
 	"growthexperiments-homepage-impact-scores-thanks-info-text": "{{SITENAME}} is created by a community of editors like {{GENDER:$1|you}}. {{GENDER:$1|You}} may be thanked by another contributor for an edit {{GENDER:$1|you’ve}} made, and {{GENDER:$1|you}} can thank others for their edits too.",
+	"growthexperiments-homepage-impact-scores-thanks-info-text-third-person": "{{SITENAME}} is created by a community of editors. Any contributor may be thanked by another for an edit. The number of thanks received is shown here.",
 	"growthexperiments-homepage-impact-scores-best-streak-info-text": "This is the highest number of days in a row that {{GENDER:$1|you}} made at least one edit.",
+	"growthexperiments-homepage-impact-scores-best-streak-info-text-third-person": "This is the highest number of days in a row that at least one edit was made.",
 	"growthexperiments-homepage-impact-scores-streak-info-label": "More information about the longest streak",
 	"growthexperiments-homepage-impact-scores-best-streak-info-data-text": "{{GENDER:$1|Your}} current longest streak is $2 {{PLURAL:$2|day|days}} which {{GENDER:$1|you}} achieved between $3.",
+	"growthexperiments-homepage-impact-scores-best-streak-info-data-text-third-person": "The current longest streak is $1 {{PLURAL:$1|day|days}} which was achieved between $2.",
 	"growthexperiments-homepage-impact-scores-best-streak-info-data-text-single-day": "{{GENDER:$1|Your}} current longest streak is one day which {{GENDER:$1|you}} achieved on $3.",
+	"growthexperiments-homepage-impact-scores-best-streak-info-data-text-single-day-third-person": "The current longest streak is one day which was achieved on $1.",
 	"growthexperiments-homepage-impact-subheader-text": "Most viewed (since {{GENDER:$1|your}} edit)",
+	"growthexperiments-homepage-impact-subheader-text-third-person": "Most viewed (since edit was made)",
 	"growthexperiments-homepage-impact-subheader-subtext": "Views since {{GENDER:$1|you}} edited (last 60 days):",
 	"growthexperiments-homepage-impact-contributions-link": "View all {{GENDER:$2|your}} edits ($1)",
 	"growthexperiments-homepage-impact-subheader-text-no-edit": "{{GENDER:$1|You}} have not yet created or edited any articles.",
@@ -102,7 +109,9 @@
 	"growthexperiments-homepage-impact-unactivated-suggested-edits-footer": "Start with a few <strong>suggested edits</strong>, then see how many people are viewing {{GENDER:$1|your}} contributions here.",
 	"growthexperiments-homepage-impact-unactivated-description": "Once {{GENDER:$1|you}} start editing, {{GENDER:$1|you'll}} see here how many people are viewing the articles {{GENDER:$1|you've}} edited.",
 	"growthexperiments-homepage-impact-error-data-not-found-text": "Temporary delay in getting {{GENDER:$1|your}} information",
+	"growthexperiments-homepage-impact-error-data-not-found-text-third-person": "Temporary delay in getting information",
 	"growthexperiments-homepage-impact-error-data-not-found-subtext": "Consider editing and learning more on {{SITENAME}}, then come back later to view {{GENDER:$1|your}} editing impact details.",
+	"growthexperiments-homepage-impact-error-data-not-found-subtext-third-person": "Come back later to view editing impact details.",
 	"growthexperiments-tour-helpdesk-response-tip-title": "Help desk alerts",
 	"growthexperiments-tour-response-tip-text": "When {{GENDER:$1|your}} question is answered, {{GENDER:$1|you}} will have a new alert here.",
 	"growthexperiments-tour-mentor-response-tip-personal-title": "{{GENDER:$1|Mentor}} alerts",
