--- a/i18n/newcomertasks/api/en.json
+++ b/i18n/newcomertasks/api/en.json
@@ -11,6 +11,12 @@
 	"apihelp-query+growthtasks-param-debug": "Add debug data to the output.",
 	"apihelp-query+growthtasks-example-1": "Get task recommendations for copy-editing-type tasks for the current user.",
 	"apihelp-query+growthtasks-example-2": "Get task recommendations for the current user, with extended information about the pages.",
+	"apihelp-growthexperiments-structured-task-submit-data-format-link-recommendation": "A JSON string of an object with these keys:\n* <var>acceptedTargets</var>: (optional) Array with the titles of pages, the recommended link to which was accepted by the user.\n* <var>rejectedTargets</var>: (optional) Array with the titles of pages, the recommended link to which was rejected by the user.\n* <var>skippedTargets</var>: (optional) Array with the titles of pages, the recommended link to which was skipped (ignored) by the user.",
+	"apihelp-growthexperiments-structured-task-submit-data-format-image-recommendation": "A JSON string of an object with these keys:\n* <var>accepted</var>: A boolean indicating whether the user accepted the recommended image.\n* <var>reasons</var>: An array of strings identifying boolean indicating why the user rejected the recommended image. Valid values: $1\n* <var>caption</var>: Image caption provided by the user. (Must have at least $2 characters.)",
+	"apihelp-visualeditoredit-paramvalue-plugins-ge-task-link-recommendation": "Use when saving a GrowthExperiments \"[[mw:Growth/Personalized_first_day/Structured_tasks/Add_a_link|Add a link]]\" structured edit.",
+	"apihelp-visualeditoredit-paramvalue-plugins-ge-task-image-recommendation": "Use when saving a GrowthExperiments \"[[mw:Growth/Personalized_first_day/Structured_tasks/Add_an_image|Add an image]]\" structured edit.",
+	"apihelp-visualeditoredit-append-data-plugin-ge-task-link-recommendation": "<dl><dt>For the <var>ge-task-link-recommendation</var> plugin</dt><dd>\n$1\n</dd></dl>",
+	"apihelp-visualeditoredit-append-data-plugin-ge-task-image-recommendation": "<dl><dt>For the <var>ge-task-image-recommendation</var> plugin</dt><dd>\n$1\n</dd></dl>",
 	"apierror-growthexperiments-addimage-handler-accepted-missing": "'accepted' parameter missing from Add Image plugin data",
 	"apierror-growthexperiments-addimage-handler-accepted-wrongtype": "'accepted' parameter must be a boolean in Add Image plugin data, is $1",
 	"apierror-growthexperiments-addimage-handler-reason-missing": "'reason' parameter missing from Add Image plugin data",
