--- a/i18n/newcomertasks/api/en.json
+++ b/i18n/newcomertasks/api/en.json
@@ -19,10 +19,15 @@
 	"apihelp-visualeditoredit-append-data-plugin-ge-task-image-recommendation": "<dl><dt>For the <var>ge-task-image-recommendation</var> plugin</dt><dd>\n$1\n</dd></dl>",
 	"apierror-growthexperiments-addimage-handler-accepted-missing": "'accepted' parameter missing from Add Image plugin data",
 	"apierror-growthexperiments-addimage-handler-accepted-wrongtype": "'accepted' parameter must be a boolean in Add Image plugin data, is $1",
-	"apierror-growthexperiments-addimage-handler-reason-missing": "'reason' parameter missing from Add Image plugin data",
-	"apierror-growthexperiments-addimage-handler-reason-wrongtype": "'reason' parameter must be an array in Add Image plugin data, is $1",
-	"apierror-growthexperiments-addimage-handler-reason-invaliditem": "Invalid item '$1' for 'reason' parameter, must be one of: $2",
+	"apierror-growthexperiments-addimage-handler-reason-missing": "'reasons' parameter missing from Add Image plugin data",
+	"apierror-growthexperiments-addimage-handler-reason-wrongtype": "'reasons' parameter must be an array in Add Image plugin data, is $1",
+	"apierror-growthexperiments-addimage-handler-reason-invaliditem": "Invalid item '$1' for 'reasons' parameter, must be one of: $2",
 	"apierror-growthexperiments-addlink-handler-notfound": "Link recommendation record not found",
 	"apierror-growthexperiments-addlink-handler-wrongtargets": "Unexpected link recommendation targets: $1",
-	"growthexperiments-underlinked-rescore-profile": "Internal rescore profile used in GrowthExperiments link recommendations for prioritizing articles which do not yet have enough links."
+	"growthexperiments-underlinked-rescore-profile": "Internal rescore profile used in GrowthExperiments link recommendations for prioritizing articles which do not yet have enough links.",
+	"growthexperiments-addimage-feedback-accepted-editrevid": "The <var>editRevId</var> parameter is required when the <var>accepted</var> parameter is set to <kbd>true</kbd>.",
+	"growthexperiments-addimage-feedback-rejected-editrevid": "The <var>editRevId</var> parameter cannot be used when the <var>accepted</var> parameter is set to <kbd>false</kbd>.",
+	"growthexperiments-addimage-feedback-accepted-caption": "The <var>caption</var> parameter is required when the <var>accepted</var> parameter is set to <kbd>true</kbd>.",
+	"growthexperiments-addimage-feedback-revid-nonexistent": "The revision specified in <var>editRevId</var> was not found.",
+	"growthexperiments-addimage-feedback-invalid-revid-wrong-page": "The revision specified in <var>editRevId</var> belongs to a different page."
 }
