--- a/i18n/newcomertasks/api/qqq.json
+++ b/i18n/newcomertasks/api/qqq.json
@@ -26,5 +26,10 @@
 	"apierror-growthexperiments-addimage-handler-reason-invaliditem": "{{doc-apierror}}\n\n$1 is the offending value, $2 is the comma-separated list of valid items.",
 	"apierror-growthexperiments-addlink-handler-notfound": "{{doc-apierror}}",
 	"apierror-growthexperiments-addlink-handler-wrongtargets": "API error message. $1 is a comma-separated list of page titles.\n{{doc-apierror}}",
-	"growthexperiments-underlinked-rescore-profile": "Description of 'underlinked' rescore profile (which is for internal use)."
+	"growthexperiments-underlinked-rescore-profile": "Description of 'underlinked' rescore profile (which is for internal use).",
+	"growthexperiments-addimage-feedback-accepted-editrevid": "REST API error message.",
+	"growthexperiments-addimage-feedback-rejected-editrevid": "REST API error message.",
+	"growthexperiments-addimage-feedback-accepted-caption": "REST API error message.",
+	"growthexperiments-addimage-feedback-revid-nonexistent": "REST API error message.",
+	"growthexperiments-addimage-feedback-invalid-revid-wrong-page": "REST API error message."
 }
