campaigns: Donor landing page translations for sv, it, ja, fr, nl
Bug: T321370
Change-Id: Id84db9869d2f39fea02b12da3924e5073e0c933e
(cherry picked from commit 902a083826a5717497d0b5209203105b19248629)

--- a/i18n/confirmemail/fr.json
+++ b/i18n/confirmemail/fr.json
@@ -32,17 +32,17 @@
 	"growthexperiments-josacampaign-body": "Ceci est un événement organisé par l’Association jordanienne du logiciel libre et Wikimédia au Levant, pour vous aider à apprendre à utiliser Wikipédia et comment y contribuer.\n\nPour commencer à contribuer, tout ce que vous avez à faire est de remplir ce formulaire puis de choisir une tâche sur laquelle travailler.\n\nSi vous avez besoin d’aide, veuillez demander aux organisateurs de l’événement.",
 	"growthexperiments-glamcampaign-title": "Bienvenue à l’événement #1Picture1Article !\n\nVous pouvez commencer à ajouter de la connaissance à l’encyclopédie dès que vous vous avez créé votre compte utilisateur.",
 	"growthexperiments-glamcampaign-body": "Ceci est un événement organisé par Wikimedia Argentine, Wikimedia Chili, Wikimedia Mexique et la Fondation Wikimedia pour vous aider à en apprendre plus sur Wikipédia et sur la façon de placer des images illustrant différents articles en utilisant la fonctionnalité « Ajouter une image ».\n\nPour commencer à utiliser cet outil, tout ce que vous avez à faire est remplir ce formulaire puis choisir un sujet d’intérêt.\n\nSi vous avez besoin d’aide, consultez les organisateurs de l’événément.",
-	"growthexperiments-thankyoupage-title": "Merci à vous pour votre don. Créez un compte pour commencer à modifier et améliorer Wikipédia.",
-	"growthexperiments-thankyoupage-body": "Wikipédia est construit par des personnes comme {{GENDER:|}}vous qui travaillent ensemble. Modifier un article est plus facile que ce que vous pourriez penser !",
-	"growthexperiments-thankyoupage-body-mobile": "Wikipédia est construit par des personnes comme {{GENDER:|}}vous qui travaillent ensemble. Modifier un article est plus facile que ce que vous pourriez penser !",
-	"growthexperiments-thankyoupage-bullet1": "Tâches simples qui correspondent à {{GENDER:|}}vos intérêts",
-	"growthexperiments-thankyoupage-bullet2": "Aide et orientation pendant que {{GENDER:|}}vous modifiez",
-	"growthexperiments-thankyoupage-bullet3": "Informations sur combien de personnes voient {{GENDER:|}}votre travail",
+	"growthexperiments-thankyoupage-title": "Merci de vos dons. Créez votre compte pour commencer à modifier et améliorer Wikipédia.",
+	"growthexperiments-thankyoupage-body": "Wikipédia est bâtie par des gens comme vous qui travaillent ensemble. Modifier un article est plus simple que vous ne le pensez ! Avec votre compte, vous accéderez à :",
+	"growthexperiments-thankyoupage-body-mobile": "Wikipédia est bâtie par des gens comme vous qui travaillent ensemble. Modifier un article est plus simple que vous ne le pensez !",
+	"growthexperiments-thankyoupage-bullet1": "Des tâches simples qui correspondent à vos centres d’intérêt",
+	"growthexperiments-thankyoupage-bullet2": "De l’aide et des conseils pour participer",
+	"growthexperiments-thankyoupage-bullet3": "Des données sur le nombre de personnes qui voient votre travail",
 	"growthexperiments-thankyoubanner-title": "Créer un compte pour commencer à modifier et améliorer Wikipédia.",
 	"growthexperiments-thankyoubanner-body": "Wikipédia est construit par des personnes comme {{GENDER:|}}vous qui travaillent ensemble. Modifier un article est plus facile que ce que {{GENDER:|}}vous pourriez penser !",
 	"growthexperiments-thankyoubanner-body-mobile": "Wikipédia est construit par des personnes comme {{GENDER:|}}vous qui travaillent ensemble. Modifier un article est plus facile que ce que {{GENDER:|}}vous pourriez penser !",
 	"growthexperiments-thankyoubanner-bullet1": "Tâches simples qui correspondent à {{GENDER:|}}vos intérêts",
 	"growthexperiments-thankyoubanner-bullet2": "Aide et orientation pendant que {{GENDER:|}}vous modifiez",
 	"growthexperiments-thankyoubanner-bullet3": "Informations sur combien de personnes voient {{GENDER:|}}votre travail",
-	"growthexperiments-campaigns-footer": "En créant {{GENDER:|}}votre compte sur cette page, il sera associé à cette campagne dans des fins liées à l’expérience et l’analyse."
+	"growthexperiments-campaigns-footer": "Les comptes créés depuis cette  page sont associés à la campagne en cours à des fins d’analyse."
 }
