--- a/i18n/confirmemail/it.json
+++ b/i18n/confirmemail/it.json
@@ -20,5 +20,12 @@
 	"growthexperiments-marketingvideocampaign-title": "Wikipedia è fatta da persone come te",
 	"growthexperiments-signupcampaign-bullet1": "Voci suggerite secondo i {{GENDER:|tuoi}} interessi",
 	"growthexperiments-signupcampaign-bullet2": "Chiedi aiuto a un utente esperto",
-	"growthexperiments-signupcampaign-bullet3": "Inizia con modifiche piccole e facili"
+	"growthexperiments-signupcampaign-bullet3": "Inizia con modifiche piccole e facili",
+	"growthexperiments-thankyoupage-title": "Grazie della tua donazione! Crea un account e comincia a editare e migliorare Wikipedia.",
+	"growthexperiments-thankyoupage-body": "Wikipedia è fatta da persone come te che lavorano insieme. Scrivere o modificare una voce è più facile di quanto pensi!\n\nCon il tuo account, avrai accesso a:",
+	"growthexperiments-thankyoupage-body-mobile": "Wikipedia è fatta da persone come te che lavorano insieme. Scrivere o modificare una voce è più facile di quanto pensi!",
+	"growthexperiments-thankyoupage-bullet1": "Semplici compiti che corrispondo ai tuoi interessi",
+	"growthexperiments-thankyoupage-bullet2": "Aiuto e guida durante l’editing",
+	"growthexperiments-thankyoupage-bullet3": "Informazioni sul numero di persone che vedono il tuo lavoro",
+	"growthexperiments-campaigns-footer": "Creando il tuo account tramite questa pagina, esso verrà associato a questa campagna ai fini di esperienza e analisi."
 }
