--- a/i18n/confirmemail/nl.json
+++ b/i18n/confirmemail/nl.json
@@ -23,5 +23,11 @@
 	"growthexperiments-signupcampaign-bullet1": "Voorgestelde artikelen in {{GENDER:|uw}} interesses",
 	"growthexperiments-signupcampaign-bullet2": "Vraag om hulp van een ervaren redacteur",
 	"growthexperiments-signupcampaign-bullet3": "Begin met kleine, gemakkelijke bewerkingen",
-	"growthexperiments-campaigns-footer": "Door een account op deze pagina aan te maken, wordt het voor ervarings- en analysedoeleinden aan deze campagne gekoppeld."
+	"growthexperiments-thankyoupage-title": "Wat fijn dat je een donateur bent. Maak een account aan om Wikipedia te kunnen bewerken en verbeteren.",
+	"growthexperiments-thankyoupage-body": "Wikipedia wordt gecreëerd door mensen zoals jij die met elkaar werken.  Het bewerken van een artikel is gemakkelijker dan je denkt!\n\nMet een account heb je toegang tot:",
+	"growthexperiments-thankyoupage-body-mobile": "Wikipedia wordt gecreëerd door mensen zoals jij die met elkaar werken.  Het bewerken van een artikel is gemakkelijker dan je denkt!",
+	"growthexperiments-thankyoupage-bullet1": "Eenvoudige taken die bij je interesses passen",
+	"growthexperiments-thankyoupage-bullet2": "Hulp en begeleiding tijdens het bewerken",
+	"growthexperiments-thankyoupage-bullet3": "Inzicht in hoeveel mensen je werk bekijken",
+	"growthexperiments-campaigns-footer": "Als je op deze pagina een account aanmaakt, wordt die voor ervarings- en analysedoeleinden aan deze campagne gekoppeld."
 }
