[i18n] Rephrase Special:ClaimMentee's confirmation message
Avoid using GENDER:, as the word "mentor" can relate to
several different mentors at the same time. Instead,
say "Yes, I really want to proceed", to be generic.

Bug: T324615
Change-Id: I0a83450380bd209078a63435f4002695c8bc48e2

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -339,7 +339,7 @@
 	"growthexperiments-homepage-claimmentee-reason": "Reason for claiming this mentee",
 	"growthexperiments-homepage-claimmentee-success": "{{GENDER:$3|You changed}} mentor of {{PLURAL:$2|user|users}} $1 to {{GENDER:$4|$5}}. Return to the [[Special:MentorDashboard|mentor dashboard]].",
 	"growthexperiments-homepage-claimmentee-alreadychanged": "{{GENDER:$1|$1's}} mentor was already changed. Are {{GENDER:$2|you}} sure {{GENDER:$2|you}} want to change it again?",
-	"growthexperiments-claimmentee-confirm": "Yes, I really want to change the {{GENDER:|mentor}}",
+	"growthexperiments-claimmentee-confirm": "Yes, I really want to proceed",
 	"growthexperiments-log-name": "GrowthExperiments log",
 	"growthexperiments-log-header": "This is a log of actions made in GrowthExperiments extension.",
 	"logentry-growthexperiments-claimmentee": "$1 {{GENDER:$2|claimed}} {{GENDER:$6|$3}} as their mentee (previous {{GENDER:$4|mentor}} $5)",
